Add Robolectric unit tests for `NoteDao`
Signed-off-by: Oussama Teyib <oussama.teyib@gmail.com>