@@ -3,8 +3,10 @@ package com.oussamateyib.thoth
 import com.android.build.api.dsl.CommonExtension
 import org.gradle.api.Project
 import org.gradle.api.plugins.JavaPluginExtension
+import org.gradle.api.tasks.testing.Test
 import org.gradle.jvm.toolchain.JavaLanguageVersion
 import org.gradle.kotlin.dsl.configure
+import org.gradle.kotlin.dsl.withType
 
 internal fun Project.configureKotlinAndroid(
     commonExtension: CommonExtension,
@@ -25,5 +27,12 @@ internal fun Project.configureKotlinAndroid(
         toolchain {
             languageVersion.set(JavaLanguageVersion.of(21))
         }
+    }
+
+    // Allow Robolectric to access internal JVM classes
+    tasks.withType<Test>().configureEach {
+        jvmArgs(
+            "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+        )
     }
 }
